--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "http-status": "1.0.1",
     "joi": "10.6.0",
     "jsonwebtoken": "7.1.9",
+    "lodash": "false4.17.11",
     "method-override": "^2.3.10",
     "mongoose": "5.4.11",
     "morgan": "1.9.0",
