--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:debug": "cross-env DEBUG=express-api-starter:* yarn start",
     "lint": "esw *.js server config --color",
     "lint:watch": "yarn lint -- --watch",
-    "precommit": "yarn lint && yarn test",
+    "precommit": "yarn lint",
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors server --recursive",
     "test:watch": "yarn test -- --watch",
     "test:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/istanbul cover _mocha -- --ui bdd --reporter spec --colors server --recursive",
@@ -40,6 +40,7 @@
     "boilerplate"
   ],
   "dependencies": {
+    "bcrypt": "false3.0.4",
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "compression": "1.7.2",
