--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start:debug": "cross-env DEBUG=express-api-starter:* yarn start",
     "lint": "esw *.js server config --color",
     "lint:watch": "yarn lint -- --watch",
-    "plop": "plop",
+    "generate": "plop",
+    "g": "plop",
     "precommit": "yarn lint",
     "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors server --recursive",
     "test:watch": "yarn test -- --watch",
